// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should call onChange callback 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[MockFunction]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <Unchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </Unchecked>
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                aria-hidden={true}
                className="css-1hju4sd label"
                id="foo-label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should have on value at a time 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <Unchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </Unchecked>
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                aria-hidden={true}
                className="css-1hju4sd label"
                id="foo-label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_bar/.1"
          label="bar"
          name="bar"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 bar radioItem"
            htmlFor="bar"
          >
            <Unchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </Unchecked>
            <input
              aria-labelledby="bar-label"
              checked={false}
              className="sr-only input"
              id="bar"
              name="bar"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="css-1hju4sd label"
              id="bar-label"
              params={Object {}}
              role={null}
              string="bar"
              transform={null}
            >
              <span
                aria-hidden={true}
                className="css-1hju4sd label"
                id="bar-label"
                role={null}
              >
                bar
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render column group with items 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <Unchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </Unchecked>
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                aria-hidden={true}
                className="css-1hju4sd label"
                id="foo-label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render empty group 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      />
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render rows group with items 1`] = `
<RadioGroup
  className=""
  direction="rows"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1gehsfr radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <Unchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </Unchecked>
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                aria-hidden={true}
                className="css-1hju4sd label"
                id="foo-label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should use default value 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value="foo"
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={true}
          className=""
          id={null}
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <Checked
              className="css-nihp8 css-pljilv checkedIcon"
            >
              <Icon
                className="css-nihp8 css-pljilv checkedIcon"
                color={null}
                content="<path d=\\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-nihp8 css-pljilv checkedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </Checked>
            <input
              aria-labelledby="foo-label"
              checked={true}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <Translate
              acceptPlainTextWithPlaceholders={false}
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
              params={Object {}}
              role={null}
              string="foo"
              transform={null}
            >
              <span
                aria-hidden={true}
                className="css-1hju4sd label"
                id="foo-label"
                role={null}
              >
                foo
              </span>
            </Translate>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;
